release 1.11
- Jackson dependency upgrade: 1.8.3 -> 1.9.0
- Added EclipseLink MOXy support (http://wiki.eclipse.org/EclipseLink/Examples/MOXy)
  The main added value is the external JAXB binding feature, 
  see moxy-oxm-mapping example for details 
- Workarounded issue 802
  http://java.net/jira/browse/JERSEY-802
  Client filters are not executed when using NonBlockingClient and making
  async web requests. Introduced a way how to set Ning request/response filters,
  Jersey client filters can't be used.

release 1.10 (11-2011)
- Fixed issue 791
  http://java.net/jira/browse/JERSEY-796
  jersey-archive was incorrectly updated when jersey-servlet module was introduced
- Fixed issue 796
  http://java.net/jira/browse/JERSEY-796
  Wadl generated in response to OPTIONS request wasn't generated correctly;
  fixed by using JAXBContext from WadlApplicationContext.
- Fixed issue 778
  http://java.net/jira/browse/JERSEY-778
  * Breaking change *
  Modified WadlGenerator interface to be able to generate more than one response
  for one declared method; this is particularly useful when you are producing
  different element (entity types) with different status codes. See WADL spec
  (http://www.w3.org/Submission/wadl/#x3-40001.3) and/or Extended WADL
  webapp sample for more details.
- Fixed issue 794
  http://java.net/jira/browse/JERSEY-794
  Resources base in generated wadl does not reflect only first request anymore,
  redesigned cache to invalidate when request comes form different base URI.
- Fixed issue 29
  http://java.net/jira/browse/JERSEY-29
  Response to GET /application.wadl and OPTIONS /url now contains Last-modified
  header
- Fixed issue 789
  http://java.net/jira/browse/JERSEY-789
  OAuthServerFilter now compares consumer keys instead of consumer secrets
- Fixed issue 777
  http://java.net/jira/browse/JERSEY-777
  Provide support for byte[] in FormDataBodyPart
- Fixed issue 784
  http://java.net/jira/browse/JERSEY-784